# rust-operator-plugins

./: .gitignore  LICENSE  Makefile  README.md  go.mod  go.sum
hack/: check-license.sh
internal/version/: version.go
pkg/: domain.go
pkg/machinery/: marker.go
pkg/plugins/rust/: domain.go  marker.go  options.go
pkg/plugins/rust/v1alpha/: api.go  api_test.go  init.go  init_test.go  plugin.go  plugin_test.go  suite_test.go
pkg/plugins/rust/v1alpha/constants/: constants.go
pkg/plugins/rust/v1alpha/scaffolds/: api.go  init.go
pkg/plugins/rust/v1alpha/scaffolds/internal/templates/: cargotoml.go  dockerfile.go  dockerignore.go  gitignore.go  makefile.go  readme.go
pkg/plugins/rust/v1alpha/scaffolds/internal/templates/hack/: boilerplate.go
pkg/plugins/rust/v1alpha/scaffolds/internal/templates/src/: api.go  apirs.go  controller.go  controllerrs.go  crdgenerator.go  main.go  mainrs.go
pkg/plugins/rust/v1alpha/scaffolds/internal/templates/src/api/: types.go
pkg/plugins/rust/v1alpha/scaffolds/internal/templates/src/controller/: controllers.go
pkg/plugins/rust/v1alpha/utils/test/: utils.go
pkg/rust/v1alpha/: api.go  init.go  plugin.go
pkg/rust/v1alpha/scaffolds/: api.go  init.go
testdata/memcached-operator/: Cargo.toml  Dockerfile  Makefile  PROJECT  README.md
testdata/memcached-operator/resources/sample/: memcached.yaml
testdata/memcached-operator/src/: api.rs  controller.rs  crd_generator.rs  main.rs
testdata/memcached-operator/src/api/: memcached_types.rs
testdata/memcached-operator/src/controller/: memcached_controller.rs
