[package]
name = "memcached-operator"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"

[[bin]]
name = "crdgen"
path = "src/crd_generator.rs"

[dependencies]
futures = "0.3.31"
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = { version = "0.99.0", features = ["runtime", "client", "derive"] }
thiserror = "2.0.8"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "rt"] }
schemars = "0.8.21"
serde = "1.0.216"
serde_json = "1.0.134"
serde_yaml = "0.9.34"
async-trait = "0.1.83"
log = "0.4.27"
